<resources>
    <string name="app_name">H2Oasis</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="username">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="completeName">Nombre Completo</string>
    <string name="exampleCompleteName">ej: Osvaldo Ortega Pérez</string>
    <string name="exampleEmail">Nombre Completo</string>
    <string name="Email">Correo electrónico</string>
    <string name="confirmPassword">Confirmar contraseña</string>

    <string name="usuario">Usuario</string>
    <string name="control_parental">Control Parental</string>

    <string name="ahorros">Ahorros</string>
    <string name="perfil">Perfil</string>
    <string name="ahorrar">Ahorrar</string>
    <string name="ej_cuenta">Cuenta:</string>
    <string name="tipo_hint">Tipo de ahorro</string>
    <string name="duracion">Duración:</string>
    <string name="ahorro_gen">Ahorro Generado:</string>
    <string name="bonus">Interés (7% Anual):</string>
    <string name="movimientos_icono">movimientos_icono</string>
    <string name="movimientos">Movimientos</string>
    <string name="su_saldo_actual_es">SU SALDO ACTUAL ES:</string>
    <string name="estado_de_cuenta">Estado de cuenta</string>
    <string name="cambio_de_divisas">Cambio de Divisas</string>

    <string name="_340_50">$340.50</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_idkacti">idkacti</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add">Agregar</string>
    <string name="cantidad">Cantidad</string>
    <string name="capacidad">Capacidad</string>
    <string name="configuracion">Configuración</string>
    <string name="statistics">Estadísticas</string>
    <string name="fillWaterTank">Llenar Cisterna</string>
    <string name="notifications">Notificaciones</string>
    <string name="description">Descripción</string>
    <string name="shortName">Nombre Corto</string>
    <string name="addWaterTank">Agregar Cisterna</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="waterTanks">Cisternas</string>
    <string name="user_profile">Perfil</string>
    <string name="edit_profile">Editar Usuario</string>
    <string name="logout">Cerrar sesión</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="cancel">Cancelar</string>
    <string name="registration_date">Fecha de registro:</string>
    <string name="change_Password"><u>Cambiar contraseña</u></string>
    <string name="need_Password">Para confirmar los cambios, digite de nuevo su contraseña:</string>
    <string name="delete">Eliminar</string>
    <string name="newPassword">Contraseña Nueva</string>
    <string name="actualPassword">Contraseña Actual</string>
    <string name="confirmNewPassword">Confirmar Contraseña Nueva</string>
    <string name="deleteAccount">Eliminar Cuenta</string>

    <string-array name="filter_time">
        <item>Diario</item>
        <item>Semanal</item>
        <item>Mensual</item>
    </string-array>
</resources>