<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMainDRAFT">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_FillWaterTank"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="24dp"

        android:contentDescription="@string/waterTanks"
        android:text="@string/waterTanks"
        app:icon="@drawable/baseline_format_color_fill_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_Username" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_Statistics"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"


        android:layout_marginTop="12dp"
        android:contentDescription="@string/statistics"
        android:text="@string/statistics"
        app:icon="@drawable/baseline_query_stats_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_FillWaterTank" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_Settigs"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"

        android:layout_marginTop="12dp"
        android:contentDescription="@string/configuracion"
        android:text="@string/configuracion"
        app:icon="@drawable/baseline_settings_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Statistics" />


    <TextView
        android:id="@+id/TV_MenuSaldoActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="32dp"
        android:text="@string/bienvenido"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_LogoApp" />

    <TextView
        android:id="@+id/TV_Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="144dp"
        android:text="@string/username"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_MenuSaldoActual" />

    <ImageView
        android:id="@+id/iv_LogoApp"
        android:layout_width="269dp"
        android:layout_height="183dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="71dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_MiPrimerBanco"
        app:srcCompat="@drawable/logo_color_no_background" />

    <TextView
        android:id="@+id/tv_MiPrimerBanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="19dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iv_LogoApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_ahorros"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="16dp"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Secondary"

        android:layout_marginBottom="36dp"
        android:contentDescription="@string/notifications"
        android:text="@string/notifications"
        app:icon="@drawable/baseline_notifications_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_perfil"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Secondary"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/register"
        android:text="@string/perfil"
        app:icon="@drawable/ic_sharp_account_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>