<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ActivityUserProfile">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="-80dp"
        android:alpha="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_circle_24" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="-20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_circle_24"
        android:alpha="0.5"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="173dp"
            android:layout_height="140dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="28dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_sharp_account_circle_24"
            app:tint="?attr/colorPrimaryInverse"
            
            />

        <TextView
            android:id="@+id/tv_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/user_profile"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView3" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_CompleteName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:hint="@string/completeName"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_edit_profile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_CompleteName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="255"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_Username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:hint="@string/username"


            app:layout_constraintStart_toStartOf="@+id/ti_CompleteName"
            app:layout_constraintTop_toBottomOf="@+id/ti_CompleteName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_EmailAddress"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:hint="@string/Email"

        app:layout_constraintStart_toStartOf="@+id/ti_Username"
        app:layout_constraintTop_toBottomOf="@+id/ti_Username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="100"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_needPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/need_Password"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_EmailAddress"
        android:textColor="?attr/colorPrimary"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_Password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_needPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="30"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/change_Password"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_Password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_deleteAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:icon="@drawable/baseline_save_24"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_deleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="24dp"
        android:text="@string/deleteAccount"
        android:textColor="?attr/colorOnErrorContainer"
        app:backgroundTint="?attr/colorErrorContainer"
        app:iconTint="?attr/colorOnErrorContainer"
        app:icon="@drawable/round_no_accounts_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

