<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityChangePassword">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="173dp"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorPrimarySurface"
        app:srcCompat="@drawable/round_password_24"/>

    <TextView
        android:id="@+id/tv_changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:text="@string/change_Password"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_actualPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/actualPassword"
        android:layout_marginTop="12sp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_changePassword">

        <com.google.android.material.textfield.TextInputEditText
            android:maxLength="255"
            android:id="@+id/tiet_actualPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_NewPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/newPassword"
        app:endIconMode="password_toggle"
        android:layout_marginTop="12sp"

        app:layout_constraintStart_toStartOf="@+id/ti_actualPassword"
        app:layout_constraintTop_toBottomOf="@+id/ti_actualPassword" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_NewPassword"
            android:maxLength="30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_ConfirmPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirmNewPassword"
        app:endIconMode="password_toggle"
        android:layout_marginTop="12sp"

        app:layout_constraintStart_toStartOf="@+id/ti_NewPassword"
        app:layout_constraintTop_toBottomOf="@+id/ti_NewPassword" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_ConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/change_Password"
        android:text="@string/change_Password"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
        app:icon="@drawable/round_lock_24" />

</androidx.constraintlayout.widget.ConstraintLayout>